user responsibility to know where cuda compiler is

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,18 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
-set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
+# set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
 project(CCDGPU LANGUAGES CXX CUDA)
 
-option(LIBIGL_WITH_COMISO            "Use CoMiso"                   OFF)
-option(LIBIGL_WITH_EMBREE            "Use Embree"                   OFF)
-option(LIBIGL_WITH_OPENGL            "Use OpenGL"                   OFF)
-option(LIBIGL_WITH_OPENGL_GLFW       "Use GLFW"                     OFF)
-option(LIBIGL_WITH_OPENGL_GLFW_IMGUI "Use ImGui"                    OFF)
-option(LIBIGL_WITH_PNG               "Use PNG"                      OFF)
-option(LIBIGL_WITH_TETGEN            "Use Tetgen"                   OFF)
-option(LIBIGL_WITH_TRIANGLE          "Use Triangle"                 OFF)
-option(LIBIGL_WITH_PREDICATES        "Use exact predicates"         OFF)
-option(LIBIGL_WITH_XML               "Use XML"                      OFF)
-option(LIBIGL_WITH_PYTHON            "Use Python"                   OFF)
+set(LIBIGL_WITH_COMISO OFF CACHE BOOL "Use CoMiso")
+set(LIBIGL_WITH_EMBREE OFF  CACHE BOOL  "Use Embree"  )
+set(LIBIGL_WITH_OPENGL            OFF CACHE BOOL "Use OpenGL"          )
+set(LIBIGL_WITH_OPENGL_GLFW       OFF CACHE BOOL "Use GLFW"            )
+set(LIBIGL_WITH_OPENGL_GLFW_IMGUI OFF CACHE BOOL "Use ImGui"           )
+set(LIBIGL_WITH_PNG               OFF CACHE BOOL "Use PNG"             )
+set(LIBIGL_WITH_TETGEN            OFF CACHE BOOL "Use Tetgen"          )
+set(LIBIGL_WITH_TRIANGLE          OFF CACHE BOOL "Use Triangle"        )
+set(LIBIGL_WITH_PREDICATES        OFF CACHE BOOL "Use exact predicates")
+set(LIBIGL_WITH_XML               OFF CACHE BOOL "Use XML"             )
+set(LIBIGL_WITH_PYTHON            OFF CACHE BOOL "Use Python"          )
 
 
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
