--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,18 @@
 set(CCDGPU_SOURCES
+tools/CType.cuh
+tools/CType.cu
+# tools/book.h
+tools/timer.cuh
+tools/timer.hpp
+# tools/io.h
+# tools/io.cpp
+# tools/read_rational_csv.cpp
+# tools/read_rational_csv.hpp
+# tools/rational.hpp
+
+src/Type.hpp
+src/root_finder.cuh
+src/root_finder.cu
 
 src/helper.cuh
 src/helper.cu
