first full automatic working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(LIBIGL_WITH_TRIANGLE OFF CACHE BOOL "Use Triangle")
 set(LIBIGL_WITH_PREDICATES ON CACHE BOOL "Use exact predicates")
 set(LIBIGL_WITH_XML OFF CACHE BOOL "Use XML")
 set(LIBIGL_WITH_PYTHON OFF CACHE BOOL "Use Python")
-set(CCDGPU_BROADPHASE_PATH "${PROJECT_SOURCE_DIR}/broadphase-gpu")
+set(CCDGPU_BROADPHASE_PATH "${PROJECT_SOURCE_DIR}/../broadphase-gpu")
 
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
   set(CCDGPU_TOPLEVEL_PROJECT ON)
